	* surfraw.IN, rfc: remove bashisms.
	* cnn: fixed url.
	* debcontents: updated ubuntu distribution.
	* deblists: rewrote for new search interface.
	* debpackages: updated debian url.
	* genpkg: as straight search has gone, we now go to
	  packages.gentoo.org/packages/<arg>.
	* yubnub: disable requoting (thanks to Nathaniel Heinrichs).
	* sunsolve: removed, replaced by sunonesearch.
	* cddb, freebsd, pgpkeys, w3link, webster, ebay(cn): fixed tests.
	* Updated my email address.

2007-10-06  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Added SURFRAW_lang variable to set default country/language.
	  Affected elvi: amazon, bbcnews, ebay, ixquick, leodict,
	  opensearch, translate, wetandwild, wikipedia.
	  Thanks to Simon Ernst for the idea.
	* surfraw.IN (w3_url_escape): fix quoting of single quote.
	  Thanks to Alexander Becher for the patch.
	* New elvis: lsm - search the Linux Software Map.
	* fsfdir: fixed search URL.
	* amazon, ebay, translate: expanded language/country list.
	* surfraw.lsm.in: fixed syntax of Primary-site.

2007-09-13  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Actual new upstream release.
	* Bumped version to 2.2.0.
	* configure now supports --disable-opensearch.
	  improved help macro syntax.
	  Patches from James Rowe, thanks!
	* cia elvi fixed, thanks to Charles Twardy.
	  Evidently I was wrong about there being a LWP problem
	  with the cia test, test reenabled.
	* Fixed discogs test.
	* Moved surfraw and surfraw-update-path from dist_bin_SCRIPTS
	  to bin_SCRIPTS so they are built rather than shipped.
	* Updated LSM entry.
	* Added new make target: make submit-lsm
	  Mails updated LSM entry to LSM@qqx.org.
	* Updated copyright dates.
	* Updated README.

2007-09-06  Ian Beckwith   <ianb@nessie.mcc.ac.uk>

	* Surfraw 2.1.7
	* First official upstream release by the debian surfraw-devel
	  team. For previous detailed changelog entries, see the debian
 	  changelog in debian/changelog. For a user-level summary of
	  changes, see NEWS.


